# chukyo-bunseki

./: .editorconfig  .env.example  .eslintrc.json  .gitignore  .prettierignore  .prettierrc.json  AGENT.md  CLI-IMPLEMENTATION.md  README.md  SETUP_COMPLETE.md  bunfig.toml  chukyo-cli  cli-examples.ts  eslint.config.js  package.json  playwright.config.ts  rustfmt.toml  test-import.mjs  tsconfig.base.json  tsconfig.json  vitest.config.ts
.github/instructions/: general.instructions.md  general.md  mcp_crawler.instructions.md  mcp_crawler.md  requirements_agent.instructions.md  requirements_agent.md
apps/desktop/: index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/src/: App.css  App.tsx  index.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: main.rs
apps/mcp-bridge/: package.json
apps/mcp-bridge/src/: gemini-service.ts  index.ts  mcp-client.ts
scripts/: build-all.js  dev-all.js  install-all.js  test-all.js
tests/: e2e.spec.ts  unit.test.ts
