[package]
name = "portal-research-agent"
version = "0.1.0"
description = "学生ポータルリサーチエージェント"
authors = ["Chukyo University Research Team"]
license = "MIT"
repository = "https://github.com/dokimiki/chukyo-bunseki"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "protocol-asset", "fs-read-file", "fs-write-file", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
tokio-tungstenite = "0.20"
futures-util = "0.3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
